--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+// Global Styles
+
+@import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+body {
+  background-color: #f8f9fa;
+  color: #333;
+}
+
+.bg-pink {
+  background-color: #e83e8c;
+}
+
+.btn-pink {
+  background-color: #e83e8c;
+  color: white;
+  border: none;
+
+  &:hover {
+    background-color: darken(#e83e8c, 10%);
+  }
+}
