--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,7 +1,7 @@
 // Global Styles
 
-@import '~bootstrap/scss/bootstrap';
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import 'bootstrap/scss/bootstrap';
+//@import '~@fortawesome/fontawesome-free/css/all.min.css';
 
 body {
   background-color: #f8f9fa;
