--- a/web/src/app/components/inc/header/header.component.scss
+++ b/web/src/app/components/inc/header/header.component.scss
@@ -1,12 +1,19 @@
 .bg-pink {
-    background-color: #e83e8c;
-  }
-  
-  .navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .nav-link {
-    font-size: 1.1rem;
-  }
+  background-color: #e83e8c;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.nav-link {
+  font-size: 1.1rem;
+}
+
+.nav-link.active {
+  font-weight: bold;
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+}
