--- a/web/src/app/components/inc/header/header.component.html
+++ b/web/src/app/components/inc/header/header.component.html
@@ -1,15 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-    <div class="container">
-      <a class="navbar-brand" href="#">{{ title }}</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+  <div class="container">
+    <a class="navbar-brand" href="#">{{ title }}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
         <li *ngFor="let item of menuItems" class="nav-item">
-            <a class="nav-link" [routerLink]="item.link">{{ item.name }}</a>
+          <a
+            *ngIf="!item.requiresAuth || authService.isAuthenticated()"
+            class="nav-link"
+            [routerLink]="item.link"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            {{ item.name }}
+          </a>
         </li>
-        </ul>
-      </div>
+        <li class="nav-item" *ngIf="authService.isAuthenticated()">
+          <button class="btn btn-link nav-link" (click)="logout()">Logout</button>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
